<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.tingwei_habittracker.addHabitPage">

    <!-- Allows user to type out their habit
         * Maybe take out the button? Useless since we have a Confirm button-->
    <TextView
        android:id="@+id/habit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_text"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/add_habit_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_a_habit"
        android:layout_below="@id/habit_text"/>


    <TextView
        android:id="@+id/select_days_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_habit_edittext"
        android:text="Select Days"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingTop="5sp"/>

    <!-- Toggle buttons for days of the week -->
    <LinearLayout
        android:id="@+id/day_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_days_textview"
        android:paddingTop="5sp">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/sunday"
            android:textOn="@string/sunday"
            android:onClick="sunToggle"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/monday"
            android:textOn="@string/monday"
            android:onClick="monToggle"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/tuesday"
            android:textOn="@string/tuesday"
            android:onClick="tueToggle"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/wednesday"
            android:textOn="@string/wednesday"
            android:onClick="wedToggle"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/thursday"
            android:textOn="@string/thursday"
            android:onClick="thuToggle"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/friday"
            android:textOn="@string/friday"
            android:onClick="friToggle"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/saturday"
            android:textOn="@string/saturday"
            android:onClick="satToggle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "Date"
        android:paddingTop="5sp"
        android:layout_below="@+id/day_selection"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/current_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_text"
        android:textSize="16sp"
        android:paddingBottom="5sp"
        android:paddingLeft="20sp"
        android:paddingTop="5sp"/>

    <Button
        android:id="@+id/add_habit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        android:onClick="addHabit"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>